pkgs/core/test/fixtures/config-parser/invalid/malformed-source-object/.boxfilesrc
{
  "plugins": {
    "copy": {
      "source": "npm:@boxfiles/provider-copy"
    }
  }
}
